--- a/Notes.tex
+++ b/Notes.tex
@@ -1,7 +1,92 @@
 \documentclass[a4paper]{article}
 \begin{document}
+\title{Notes}
+\author{Ema in Lan}
+\date{}
+\maketitle
 
-Notes za igrico
+\section{Prostori}
+\begin{itemize}
+    \item MAFIJA: eat, coffee, maybe study if no library
+    \item KABINET: ustni zagovori
+    \item 2. ŠTUK: pouk in pisni izpiti
+    \item LIBRARY(pogojno): study in vracanje knjige (zamudnina)
+\end{itemize}
+
+\section{Playable characters}
+\begin{itemize}
+    \item female (Ema)
+    \item male (Lan)
+\end{itemize}
+
+\section{NPC-ji}
+\begin{enumerate}
+    \item Profesorji: \begin{itemize}
+        \item Pavel Peteršič (stop)
+        \item Tomaž Različnik (fiz)
+    \end{itemize}
+    \item Baristas
+    \item Knjiznicarka
+    \item Studenti: \begin{itemize}
+        \item Bor
+        \item Matija
+    \end{itemize}
+\end{enumerate}
+
+\section{Izpiti}
+\begin{enumerate}
+    \item Pisni izpiti: \begin{itemize}
+        \item kratki, zelo odvisni od attention bar in anxiety bar
+    \end{itemize}
+
+    \item Ustni izpiti: \begin{itemize}
+        \item STOP: \ldots
+        \item Fizika: \begin{itemize}
+            \item ponesreci zaokrozis $\Pi$ na 5 namesto na 3
+            \item imas moznost izpistiti neko spremenljivko, ker se ti ne zdi pomembna in 50 \% moznost, da je bila to pravilna odlocitev
+        \end{itemize}
+    \end{itemize}
+\end{enumerate}
+
+\section{Interactive stvari}
+\begin{itemize}
+    \item kupiš kavo
+    \item vrneš knjigo
+    \item pišeš izpit
+    \item opraviš ustni izpit
+    \item porabis bon za tortilijo
+    \item učiš se v knjižnici ali v kavarni
+    \item 
+\end{itemize}
+
+\section{Characters indepth}
+\subsection*{Bor}
+\
+
+\section{Minor inconveniences}
+\begin{itemize}
+    \item spotaknes se
+    \item nekdo te zbije z vrati wcja
+    \item v wcju ni brisack in mors na ustnega z mokrimi rokami
+    \item profesor zavlece uro in zamudis na izpit
+    \item zaspis in zamudis pouk
+    \item pises izpit iz prog in nimas nalogenga vs code na solskem racunalniku
+    \item pri fiziki moras uporabljati rodje, ki ga se nisi spoznal (Izracunaj rezultanto sil na klancu, pri čemer si pomagaj z Riemannovo hipotezo)
+\end{itemize}
+
+\section{Extra}
+\begin{itemize}
+    \item dobis panic attack na izpitu
+    \item več playable characters with quirks
+    \item več letnikov + več izpitov
+    \item visji kot imas anxiety meter, vidji je volumen muske
+    \item spotaknes se 
+\end{itemize}
+
+\section{Soundtracks}
+\begin{itemize}
+    \item Your best nightmare: Undertale
+\end{itemize}
 
 
 \end{document}
