prepisovanje_neki.md_v_storyline

--- a/Notes.tex
+++ b/Notes.tex
@@ -5,6 +5,16 @@
 \date{}
 \maketitle
 
+\section{Storyline}
+\subsection*{Day-to-day}
+Si študent na solski dan in moraš narediti tasks ki povečajo tvoje znanje oz tvoj confidence.
+Odlocitve, ki jih delas, vplivajo na tvoj anxiety, attention in confidence meter: anxiety meter doloca kako likely si da dobiš panic attack. Pred koncem dneva se lahko odločiš, ali boš šel na zabavo, naredil allnighter ali pa šel spat. Vse to vpliva na metre. Ce izberes allnighter ali zabavo imas zjutraj minigame/click the screen as fast as you can, ker si zaspal in imas posledicno visok anxiety ze zjutraj. Kava ti izboljša attention in confidence ampak poslabša anxiety
+
+\subsection*{Dan izpita}
+Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, težavnost je odvisna od stanja tvojih metrov.
+Če mas attention meter prenizek, se zmedeš med izpitom.
+Če izpit padeš, se igrica konča.
+
 \section{Prostori}
 \begin{itemize}
     \item MAFIJA: eat, coffee, maybe study if no library
