--- a/Notes.tex
+++ b/Notes.tex
@@ -90,7 +90,8 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \item več playable characters with quirks
     \item več letnikov + več izpitov
     \item visji kot imas anxiety meter, vidji je volumen muske
-    \item spotaknes se 
+    \item spotaknes se
+    \item mors it bruhat pred izpitom (Ema)
 \end{itemize}
 
 \section{Soundtracks}
