--- a/Notes.tex
+++ b/Notes.tex
@@ -90,13 +90,15 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \item več playable characters with quirks
     \item več letnikov + več izpitov
     \item visji kot imas anxiety meter, vidji je volumen muske
-    \item spotaknes se
     \item mors it bruhat pred izpitom (Ema)
 \end{itemize}
 
 \section{Soundtracks}
 \begin{itemize}
-    \item Your best nightmare: Undertale
+    \item Your best nightmare: Undertale \\
+    \textsl{ce lahko copyrighted songs bova ceu ta soundtrack uporablala}
+    \item GO: Sam Day (ncs) \\
+    \textsl{vsako jutro}
 \end{itemize}
 
 
