added exam song

--- a/Notes.tex
+++ b/Notes.tex
@@ -95,10 +95,17 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 
 \section{Soundtracks}
 \begin{itemize}
-    \item Your best nightmare: Undertale \\
-    \textsl{ce lahko copyrighted songs bova ceu ta soundtrack uporablala}
-    \item GO: Sam Day (ncs) \\
-    \textsl{vsako jutro}
+    \item \textbf{copyrighted}: \begin{itemize}
+        \item Your best nightmare: Undertale \\
+        \textsl{anxiety}
+        \item On the Movements of the Earth OST - Main Theme (HQ Cover): Kensuke Ushio Orb \\
+        \textsl{exams}
+    \end{itemize}
+    
+    \item \textbf{non-copyrighted}: \begin{itemize}
+        \item GO: Sam Day (ncs) \\
+        \textsl{vsako jutro}
+    \end{itemize}
 \end{itemize}
 
 
