--- a/Notes.tex
+++ b/Notes.tex
@@ -97,14 +97,14 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 \begin{itemize}
     \item \textbf{copyrighted}: \begin{itemize}
         \item Your best nightmare: Undertale \\
-        \textsl{anxiety}
+        \textsl{(anxiety)}
         \item On the Movements of the Earth OST - Main Theme (HQ Cover): Kensuke Ushio Orb \\
-        \textsl{exams}
+        \textsl{(exams)}
     \end{itemize}
     
     \item \textbf{non-copyrighted}: \begin{itemize}
         \item GO: Sam Day (ncs) \\
-        \textsl{vsako jutro}
+        \textsl{(vsako jutro)}
     \end{itemize}
 \end{itemize}
 
