--- a/Notes.tex
+++ b/Notes.tex
@@ -108,6 +108,12 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \end{itemize}
 \end{itemize}
 
+\section{Development}
+\begin{itemize}
+    \item UPORABI SDL 2 KNJIŽNICO NAMESTO BEVY - delaš od začetka vse ampak je vse bl logicno.
+    probajta v obeh narediti window in osnovno premikanje da vidta kaj je lazje, za sdl lahko bor pomaga, bevy je nov in stvari se ne delajo. lahko da velik osnovnih stvari ne bova mogla nardit. Poglej: \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
+\end{itemize}
+
 
 \end{document}
 
