added song and art ideas

--- a/Notes.tex
+++ b/Notes.tex
@@ -94,24 +94,37 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 \end{itemize}
 
 \section{Soundtracks}
+Make your own music: Beepbox
 \begin{itemize}
     \item \textbf{copyrighted}: \begin{itemize}
         \item Your best nightmare: Undertale \\
         \textsl{(anxiety)}
         \item On the Movements of the Earth OST - Main Theme (HQ Cover): Kensuke Ushio Orb \\
         \textsl{(exams)}
+        \item Battle! Champion Cynthia: "Pokémon Diamond"\\
+        \textsl{(exams \#2)}
     \end{itemize}
     
     \item \textbf{non-copyrighted}: \begin{itemize}
         \item GO: Sam Day (ncs) \\
-        \textsl{(vsako jutro)}
+        \textsl{(morning)}
     \end{itemize}
+    \item sound effects: pixabay in freesound
+\end{itemize}
+
+\section{Art}
+dokler se ni narejen art, najdta free assets za engine (assetstore)
+\begin{itemize}
+    \item pixelart (piskel - software, lospec - colorschemes)
+    \item non-pixelart (any digital drawing app, recimo: procreate, gimp, krita)
 \end{itemize}
 
 \section{Development}
 \begin{itemize}
-    \item UPORABI SDL 2 KNJIŽNICO NAMESTO BEVY - delaš od začetka vse ampak je vse bl logicno.
-    probajta v obeh narediti window in osnovno premikanje da vidta kaj je lazje, za sdl lahko bor pomaga, bevy je nov in stvari se ne delajo. lahko da velik osnovnih stvari ne bova mogla nardit. Poglej: \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
+    \item \textbf{Način dela}: \begin{itemize}
+        \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
+        \item Game engines: Bevy (nova stvar zato lahko da stvari se ne delajo, easier)
+    \end{itemize}
 \end{itemize}
 
 
