first-main song

--- a/Notes.tex
+++ b/Notes.tex
@@ -108,6 +108,8 @@ Make your own music: Beepbox
     \item \textbf{non-copyrighted}: \begin{itemize}
         \item GO: Sam Day (ncs) \\
         \textsl{(morning)}
+        \item first-main: Lan
+        \textsl{still very bad, needs work}
     \end{itemize}
     \item sound effects: pixabay in freesound
 \end{itemize}
