--- a/Notes.tex
+++ b/Notes.tex
@@ -125,7 +125,7 @@ dokler se ni narejen art, najdta free assets za engine (assetstore)
 \begin{itemize}
     \item \textbf{Način dela}: \begin{itemize}
         \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
-        \item Game engines: Bevy (nova stvar zato lahko da stvari se ne delajo, easier)
+        \item Game engines: Bevy (absolutely not, ni dost skripte, ai ne zna, usak tedn nekej nouga dodajo in use pokvar)
     \end{itemize}
 \end{itemize}
 
