--- a/Notes.tex
+++ b/Notes.tex
@@ -66,7 +66,8 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \item opraviš ustni izpit
     \item porabis bon za tortilijo
     \item učiš se v knjižnici ali v kavarni
-    \item 
+    \item greš na čik (zniža anxiety)
+    \item poslušaš musko med predavanjem (zniža anxiety, zniža attention)
 \end{itemize}
 
 \section{Characters indepth}
@@ -90,43 +91,13 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \item več playable characters with quirks
     \item več letnikov + več izpitov
     \item visji kot imas anxiety meter, vidji je volumen muske
+    \item spotaknes se
     \item mors it bruhat pred izpitom (Ema)
 \end{itemize}
 
 \section{Soundtracks}
-Make your own music: Beepbox
 \begin{itemize}
-    \item \textbf{copyrighted}: \begin{itemize}
-        \item Your best nightmare: Undertale \\
-        \textsl{(anxiety)}
-        \item On the Movements of the Earth OST - Main Theme (HQ Cover): Kensuke Ushio Orb \\
-        \textsl{(exams)}
-        \item Battle! Champion Cynthia: "Pokémon Diamond"\\
-        \textsl{(exams \#2)}
-    \end{itemize}
-    
-    \item \textbf{non-copyrighted}: \begin{itemize}
-        \item GO: Sam Day (ncs) \\
-        \textsl{(morning)}
-        \item first-main: Lan
-        \textsl{still very bad, needs work}
-    \end{itemize}
-    \item sound effects: pixabay in freesound
-\end{itemize}
-
-\section{Art}
-dokler se ni narejen art, najdta free assets za engine (assetstore)
-\begin{itemize}
-    \item pixelart (piskel - software, lospec - colorschemes)
-    \item non-pixelart (any digital drawing app, recimo: procreate, gimp, krita)
-\end{itemize}
-
-\section{Development}
-\begin{itemize}
-    \item \textbf{Način dela}: \begin{itemize}
-        \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
-        \item Game engines: Bevy (absolutely not, ni dost skripte, ai ne zna, usak tedn nekej nouga dodajo in use pokvar)
-    \end{itemize}
+    \item Your best nightmare: Undertale
 \end{itemize}
 
 
