SDL FINALLY WORKS

--- a/Notes.tex
+++ b/Notes.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+\usepackage{hyperref}
 \begin{document}
 \title{Notes}
 \author{Ema in Lan}
@@ -17,10 +18,10 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 
 \section{Prostori}
 \begin{itemize}
-    \item MAFIJA: eat, coffee, maybe study if no library
-    \item KABINET: ustni zagovori
-    \item 2. ŠTUK: pouk in pisni izpiti
-    \item LIBRARY(pogojno): study in vracanje knjige (zamudnina)
+    \item MAFIJA\: eat, coffee, maybe study if no library
+    \item KABINET\: ustni zagovori
+    \item 2. ŠTUK\: pouk in pisni izpiti
+    \item LIBRARY (pogojno): study in vracanje knjige (zamudnina)
 \end{itemize}
 
 \section{Playable characters}
@@ -50,10 +51,11 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
     \end{itemize}
 
     \item Ustni izpiti: \begin{itemize}
-        \item STOP: \ldots
+        \item STOP\: \ldots
         \item Fizika: \begin{itemize}
             \item ponesreci zaokrozis $\Pi$ na 5 namesto na 3
-            \item imas moznost izpistiti neko spremenljivko, ker se ti ne zdi pomembna in 50 \% moznost, da je bila to pravilna odlocitev
+            \item imas moznost izpistiti neko spremenljivko, ker se ti\\
+            ne zdi pomembna in 50 \% moznost, da je bila to pravilna odlocitev
         \end{itemize}
     \end{itemize}
 \end{enumerate}
@@ -99,14 +101,14 @@ Make your own music: Beepbox
     \item \textbf{copyrighted}: \begin{itemize}
         \item Your best nightmare: Undertale \\
         \textsl{(anxiety)}
-        \item On the Movements of the Earth OST - Main Theme (HQ Cover): Kensuke Ushio Orb \\
+        \item On the Movements of the Earth OST \- Main Theme (HQ Cover): Kensuke Ushio Orb \\
         \textsl{(exams)}
-        \item Battle! Champion Cynthia: "Pokémon Diamond"\\
+        \item Battle! Champion Cynthia: `Pokémon Diamond`\\
         \textsl{(exams \#2)}
     \end{itemize}
     
     \item \textbf{non-copyrighted}: \begin{itemize}
-        \item GO: Sam Day (ncs) \\
+        \item GO\: Sam Day (ncs) \\
         \textsl{(morning)}
         \item first-main: Lan
         \textsl{still very bad, needs work}
@@ -117,14 +119,14 @@ Make your own music: Beepbox
 \section{Art}
 dokler se ni narejen art, najdta free assets za engine (assetstore)
 \begin{itemize}
-    \item pixelart (piskel - software, lospec - colorschemes)
+    \item pixelart (piskel \- software, lospec \- colorschemes)
     \item non-pixelart (any digital drawing app, recimo: procreate, gimp, krita)
 \end{itemize}
 
 \section{Development}
 \begin{itemize}
     \item \textbf{Način dela}: \begin{itemize}
-        \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \ref{https://crates.io/crates/sdl1_2-rs}{naslov crate}
+        \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \href{https://crates.io/crates/sdl1_2-rs}{Link do cratea}
         \item Game engines: Bevy (absolutely not, ni dost skripte, ai ne zna, usak tedn nekej nouga dodajo in use pokvar)
     \end{itemize}
 \end{itemize}
