deleted sdl, added notes

--- a/Notes.tex
+++ b/Notes.tex
@@ -74,7 +74,9 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 
 \section{Characters indepth}
 \subsection*{Bor}
-\
+\begin{itemize}
+    \item add unskippable yap scene, if you have a phone, you can distract him with anime brainrot
+\end{itemize}
 
 \section{Minor inconveniences}
 \begin{itemize}
