gaja's gender change
lol

--- a/Notes.tex
+++ b/Notes.tex
@@ -26,8 +26,8 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 
 \section{Playable characters}
 \begin{itemize}
-    \item female (Ema)
-    \item male (Lan)
+    \item first (Ema)
+    \item second (Lan)
 \end{itemize}
 
 \section{NPC-ji}
