--- a/Notes.tex
+++ b/Notes.tex
@@ -7,24 +7,22 @@
 \maketitle
 
 \section{Storyline}
-\subsection*{Day-to-day}
-Si študent na solski dan in moraš narediti tasks ki povečajo tvoje znanje oz tvoj confidence.
-Odlocitve, ki jih delas, vplivajo na tvoj anxiety, attention in confidence meter: anxiety meter doloca kako likely si da dobiš panic attack. Pred koncem dneva se lahko odločiš, ali boš šel na zabavo, naredil allnighter ali pa šel spat. Vse to vpliva na metre. Ce izberes allnighter ali zabavo imas zjutraj minigame/click the screen as fast as you can, ker si zaspal in imas posledicno visok anxiety ze zjutraj. Kava ti izboljša attention in confidence ampak poslabša anxiety
+\subsection*{Vsakdanje življenje}
+Si študent na delovni dan in moraš narediti različne naloge, ki povečajo tvoje znanje oziroma tvojo samozavest. Na voljo imaš različne prostore, kjer se lahko učiš, delaš izpite ali pa se družiš s prijatelji. Vsak dan se začne zjutraj in konča zvečer. Na voljo imaš različne aktivnosti, ki vplivajo na tvoje metre (ankoznost, pozornost in samozavest). Meter za anksioznost na primer določa, kakšno možnost imaš, da dobiš panični napad. Pred koncem dneva se lahko odločiš, ali boš šel na zabavo, se celo noč učil ali pa šel spat. Če izbereš celonočno učenje ali zabavo, imaš zjutraj minigame/čimhitreje klikni zaslon, ker si zaspal in imaš posledično visoko anksioznost že zjutraj. Kava ti izboljša pozornost in samozavest, a poslabša anksioznost. Učenje ti izboljša samozavest, a poslabša pozornost in anksioznost.
 
 \subsection*{Dan izpita}
-Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, težavnost je odvisna od stanja tvojih metrov.
-Če mas attention meter prenizek, se zmedeš med izpitom.
-Če izpit padeš, se igrica konča.
+Pisni izpiti so enaki a vse igralce. Imaš pravilne in napačne odgovore, težavnost je odvisna od stanja tvojih metrov. Če mas na primer meter za pozornost prenizek, se ti izpit zdi težji, kot je v resnici. Ustni izpiti so bolj odvisni od tvojih metrov. Če imaš visoko anksioznost, boš imel težave pri ustnem izpitu. Na voljo imaš tudi različne predmete, ki jih lahko izbereš, preden opravljaš izpit. Na voljo so tudi različni profesorji, ki imajo različne učne sloge in težavnosti. Če uspešno opraviš izpit, dobiš točke in napreduješ v igri. Če izpit padeš, se igrica konča. Tvoja naloga je, da uspešno opraviš vse izpite in postaneš najboljši študent na fakulteti.
 
 \section{Prostori}
 \begin{itemize}
-    \item MAFIJA\: eat, coffee, maybe study if no library
-    \item KABINET\: ustni zagovori
-    \item 2. ŠTUK\: pouk in pisni izpiti
-    \item LIBRARY (pogojno): study in vracanje knjige (zamudnina)
+    \item MAFIJA\: malica, kava, učenje, druženje
+    \item KABINET\: ustni izpiti
+    \item 2. ŠTUK\: učenje, wc, pouk in pisni izpiti 
+    \item KNJIŽNICA (pogojno): učenje in vračanje knjig (zamudnina)
+    \item SOBA\: učenje, druženje, kava, spanje, jutranji minigame
 \end{itemize}
 
-\section{Playable characters}
+\section{Playable igralci}
 \begin{itemize}
     \item first (Ema)
     \item second (Lan)
@@ -36,9 +34,9 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
         \item Pavel Peteršič (stop)
         \item Tomaž Različnik (fiz)
     \end{itemize}
-    \item Baristas
-    \item Knjiznicarka
-    \item Studenti: \begin{itemize}
+    \item bariste
+    \item knjižničarka
+    \item študenti: \begin{itemize}
         \item Bor
         \item Matija
     \end{itemize}
@@ -47,56 +45,56 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 \section{Izpiti}
 \begin{enumerate}
     \item Pisni izpiti: \begin{itemize}
-        \item kratki, zelo odvisni od attention bar in anxiety bar
+        \item kratki, zelo odvisni od metra za pozornost in anksioznost
     \end{itemize}
 
     \item Ustni izpiti: \begin{itemize}
         \item STOP\: \ldots
         \item Fizika: \begin{itemize}
-            \item ponesreci zaokrozis $\Pi$ na 5 namesto na 3
-            \item imas moznost izpistiti neko spremenljivko, ker se ti\\
-            ne zdi pomembna in 50 \% moznost, da je bila to pravilna odlocitev
+            \item ponesreči zaokrožiš $\Pi$ na 5 namesto na 3
+            \item imaš možnost izpustiti neko spremenljivko, ker se ti ne zdi\\
+            pomembna in 50 \% možnost, da je bila to pravilna odločitev
         \end{itemize}
     \end{itemize}
 \end{enumerate}
 
-\section{Interactive stvari}
+\section{Interaktivne stvari}
 \begin{itemize}
     \item kupiš kavo
     \item vrneš knjigo
     \item pišeš izpit
     \item opraviš ustni izpit
-    \item porabis bon za tortilijo
+    \item porabiš bon za tortilijo
     \item učiš se v knjižnici ali v kavarni
-    \item greš na čik (zniža anxiety)
-    \item poslušaš musko med predavanjem (zniža anxiety, zniža attention)
+    \item greš na čik (zniža anksioznost)
+    \item poslušaš glasbo med predavanjem (zniža pozornost in anksioznost)
 \end{itemize}
 
-\section{Characters indepth}
+\section{Igralci in NPC-ji podrobneje}
 \subsection*{Bor}
 \begin{itemize}
     \item add unskippable yap scene, if you have a phone, you can distract him with anime brainrot
 \end{itemize}
 
-\section{Minor inconveniences}
+\section{Manjše nevšečnosti}
 \begin{itemize}
-    \item spotaknes se
+    \item spotakneš se
     \item nekdo te zbije z vrati wcja
-    \item v wcju ni brisack in mors na ustnega z mokrimi rokami
-    \item profesor zavlece uro in zamudis na izpit
-    \item zaspis in zamudis pouk
-    \item pises izpit iz prog in nimas nalogenga vs code na solskem racunalniku
-    \item pri fiziki moras uporabljati rodje, ki ga se nisi spoznal (Izracunaj rezultanto sil na klancu, pri čemer si pomagaj z Riemannovo hipotezo)
+    \item v wcju ni brisačk in moraš na ustni izpit z mokrimi rokami
+    \item profesor zavleče uro in zamudiš na izpit
+    \item zaspiš in zamudiš pouk
+    \item spotakneš se
+    \item ne moreš najti lista s formulami
+    \item pišeš izpit iz prog in nimaš naloženga vs code na šolskem računalniku
+    \item pri fiziki moraš uporabljati orodje, ki ga še nisi spoznal (Izračunaj rezultanto sil na klancu, pri čemer si pomagaj z Riemannovo hipotezo)
 \end{itemize}
 
 \section{Extra}
 \begin{itemize}
-    \item dobis panic attack na izpitu
-    \item več playable characters with quirks
+    \item več playable igralcev with quirks
     \item več letnikov + več izpitov
-    \item visji kot imas anxiety meter, vidji je volumen muske
-    \item spotaknes se
-    \item mors it bruhat pred izpitom (Ema)
+    \item višji kot imas meter za anksioznost, večji je volumen glasbe
+    \item moraš it bruhat pred izpitom (Ema)
 \end{itemize}
 
 \section{Soundtracks}
@@ -120,7 +118,7 @@ Pisni izpiti so enaki a vse characterje. Imas pravilne in napacne odgovore, tež
 \end{itemize}
 
 \section{Art}
-dokler se ni narejen art, najdta free assets za engine (assetstore)
+dokler še ni narejen art, najdta free assets za engine (assetstore)
 \begin{itemize}
     \item pixelart (piskel \- software, lospec \- colorschemes)
     \item non-pixelart (any digital drawing app, recimo: procreate, gimp, krita)
@@ -129,8 +127,7 @@ dokler se ni narejen art, najdta free assets za engine (assetstore)
 \section{Development}
 \begin{itemize}
     \item \textbf{Način dela}: \begin{itemize}
-        \item knjižnica SDL2 (delaš od začetka vse, vse je bl logicno in ko znas osnovo se da lepo gradit na njej, bor pomaga) \href{https://crates.io/crates/sdl1_2-rs}{Link do cratea}
-        \item Game engines: Bevy (absolutely not, ni dost skripte, ai ne zna, usak tedn nekej nouga dodajo in use pokvar)
+        \item knjižnica sauron: \href{https://docs.rs/sauron/latest/sauron/index.html}{Dokumentacija}
     \end{itemize}
 \end{itemize}
 
